build/log/idf_py_stdout_output_18724
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\Recursiva\Documents\waste-clasification\build\bootloader\esp-idf\esptool_py && C:\Users\Recursiva\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/Recursiva/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/Recursiva/Documents/waste-clasification/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Users\Recursiva\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Recursiva/Documents/waste-clasification/build/config -IC:/Users/Recursiva/Documents/waste-clasification/main -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/soc/esp32 -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/soc/esp32/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/soc/esp32/register -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/hal/esp32/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_rom/esp32 -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/xtensa/esp32/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/Recursiva/Documents/waste-clasification/managed_components/espressif__esp-tflite-micro -IC:/Users/Recursiva/Documents/waste-clasification/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -IC:/Users/Recursiva/Documents/waste-clasification/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -IC:/Users/Recursiva/Documents/waste-clasification/managed_components/espressif__esp-tflite-micro/third_party/ruy -IC:/Users/Recursiva/Documents/waste-clasification/managed_components/espressif__esp-tflite-micro/third_party/kissfft -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/spi_flash/include -IC:/Users/Recursiva/esp/v5.5.1/esp-idf/components/esp_psram/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Recursiva/Documents/waste-clasification=. -fmacro-prefix-map=C:/Users/Recursiva/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp
In file included from C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp:12:
C:/Users/Recursiva/Documents/waste-clasification/main/imagen.h:1:23: error: expected ',' or ';' before '_jpg'
    1 | unsigned char test (1)_jpg[] = {
      |                       ^~~~
C:/Users/Recursiva/Documents/waste-clasification/main/imagen.h:8775:14: error: conflicting declaration 'unsigned int test'
 8775 | unsigned int test (1)_jpg_len = 105255;
      |              ^~~~
C:/Users/Recursiva/Documents/waste-clasification/main/imagen.h:1:15: note: previous declaration as 'unsigned char test'
    1 | unsigned char test (1)_jpg[] = {
      |               ^~~~
C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp: In function 'void app_main()':
C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp:87:32: error: 'test_jpg' was not declared in this scope
   87 |     if (input->bytes != sizeof(test_jpg)) {
      |                                ^~~~~~~~
C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp:93:35: error: 'test_jpg' was not declared in this scope
   93 |         memcpy(input->data.uint8, test_jpg, sizeof(test_jpg));
      |                                   ^~~~~~~~
C:/Users/Recursiva/Documents/waste-clasification/main/main.cpp:95:36: error: 'test_jpg' was not declared in this scope
   95 |         for (int i = 0; i < sizeof(test_jpg); i++)
      |                                    ^~~~~~~~
ninja: build stopped: subcommand failed.
